# vagina

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/vagina/: __init__.py  art.py  cli.py
